--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@storybook/testing-library": "^0.0.11",
     "@storybook/testing-react": "^1.3.0",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "chromatic": "^6.10.1",
     "msw": "^0.42.0",
     "msw-storybook-addon": "^1.6.3",
     "prop-types": "^15.8.1",
